discussion/kv_engine/171491/171491_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

Utilize folly::AsyncServerSocket

Folly contains code which allows us to remove our code
to accept client connections.

Later on we'll change the code to utilize folly's ability
to dispatch the clients to the various threads.

Change-Id: I7efc7020b52561f1f7f8d0af1e6743ef3fd2d9c9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-03-07 06:37:42.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-07 06:47:09.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15914/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:408:60: error: use of undeclared identifier "flags" [clang-diagnostic-error]
                            reinterpret_cast<const void*>(&flags),
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:409:36: error: use of undeclared identifier "flags" [clang-diagnostic-error]
                            sizeof(flags)) != 0) {
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:417:60: error: use of undeclared identifier "flags" [clang-diagnostic-error]
                            reinterpret_cast<const void*>(&flags),
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:418:36: error: use of undeclared identifier "flags" [clang-diagnostic-error]
                            sizeof(flags)) != 0) {
                                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15914/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:408:60:
error: use of undeclared identifier "flags" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15914/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44336/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/network_interface_manager.cc(408): error C2065: "flags": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44336/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37331/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/network_interface_manager.cc:409:36:
error: use of undeclared identifier "flags"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37331/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14785/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/daemon/network_interface_manager.cc b/daemon/network_interface_manager.cc
index fde1a1ea6..60a6faa68 100644
--- a/daemon/network_interface_manager.cc
+++ b/daemon/network_interface_manager.cc
@@ -109,8 +109,7 @@ public:
                 return;
             }
 
-            FrontEndThread::dispatch(
-                    fd.data, server.interface, std::move(ssl));
+            FrontEndThread::dispatch(fd.data, server.interface, std::move(ssl));
         }
         void acceptError(const std::exception&amp; ex) noexcept override {
             LOG_INFO(&quot;acceptError: {}&quot;, ex.what());

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14785/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5568/ : FAILURE

Compile error at [2022-03-07T06:46:05.717Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/network_interface_manager.cc:409:36:
error: use of undeclared identifier "flags"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5568/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16744/ : FAILURE

Compile error at [2022-03-07T06:44:20.822Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/network_interface_manager.cc:409:36:
error: use of undeclared identifier "flags"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16744/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17678/ : FAILURE

Compile error at [2022-03-07T06:40:39.703Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/network_interface_manager.cc:408:60:
error: ?flags? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17678/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18004/ : FAILURE

Compile error at [2022-03-07T06:41:05.610Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/network_interface_manager.cc:408:60:
error: ?flags? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18004/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5627/ : FAILURE

Compile error at [2022-03-07T06:46:02.643Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/network_interface_manager.cc:408:60:
error: ?flags? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5627/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18711/ : FAILURE

Compile error at [2022-03-07T06:40:10.565Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/network_interface_manager.cc:409:36:
error: use of undeclared identifier "flags"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18711/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26083/ : FAILURE

Compile error at [2022-03-07T06:41:08.192Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/network_interface_manager.cc:409:36:
error: use of undeclared identifier "flags"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26083/ )
----------------------------------------------------------------------------------------------------------------------
